<resources>
    <string name="app_name">Password Wallet</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="log">Log In</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="yes_account">Already have an account?</string>
    <string name="hmac">HMAC</string>
    <string name="sha">SHA512</string>
    <string name="encrypt">Select your encryption option:</string>
    <string name="menu1">Settings</string>
    <string name="menu2">Activity registration</string>
    <string name="menu3">Log out</string>
    <string name="web_addr">Web address</string>
    <string name="descript">Description</string>
    <string name="from">From</string>
    <string name="save">Save</string>
    <string name="n_pass">New password</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="c_pass">Current password</string>
    <string name="change_pass">Change your account password</string>
    <string name="add_pass">Add new password to your wallet</string>
    <string name="edit_pass">Edit password in your wallet</string>
    <string name="share_pass">Enter the username you want to share the password with</string>
    <string name="db_test_info">
        The connection to the database has been opened.
        You can check the database content in Database Inspector now.
    </string>
    <string name="close">Close connection</string>
    <string name="fake_ip">Fake IP address</string>
    <string name="ip">0.0.0.1</string>
    <string name="list">User\&apos;s login attempt list</string>
    <string name="ip_list">IP ADDRESS</string>
    <string name="time_list">ATTEMPT\'S TIME</string>
    <string name="details_list">DETAILS</string>
    <string name="to">Send to:</string>
    <string name="banner">Read-only Mode</string>
    <string name="banner2">Modify Mode</string>
    <string name="action_type">Action type</string>
    <string name="action">Action type:</string>

    <array name="action">
        <item>All actions</item>
        <item>Add password</item>
        <item>Edit password</item>
        <item>Delete password</item>
        <item>Share password</item>
        <item>View password</item>
    </array>

    <string name="time">Time</string>
    <string name="user2">User</string>
    <string name="present_data">Present data</string>
    <string name="previous_data">Previous data</string>
    <string name="inserted_data">Inserted data</string>
    <string name="deleted_data">Deleted data</string>
    <string name="restore">No data to restore</string>
</resources>