<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="35dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/startup_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fake_ip"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border_text_filled"
                android:gravity="center"
                android:hint="@string/fake_ip"
                android:text="@string/ip"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:src="@drawable/ic_refresh" />

        </RelativeLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_text_filled"
            android:gravity="center"
            android:hint="@string/user"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_text_filled"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_red"
            android:text="@string/log" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textColorLink="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>