<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="35dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/startup_logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/border_text_filled"
                    android:gravity="center"
                    android:hint="@string/user"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border_text_filled"
                    android:gravity="center"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border_text_filled"
                    android:gravity="center"
                    android:hint="@string/repeat_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/encrypt"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/sha"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginEnd="30dp"
                        android:freezesText="false"
                        android:text="@string/sha"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/hmac"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/hmac"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RadioGroup>

                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_red"
                    android:text="@string/sign_up" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes_account"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/log_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/log"
                        android:textColor="@color/white"
                        android:textColorLink="@color/text_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>