<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorAccent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/menu1">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <Switch
                        android:id="@+id/mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/banner2"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_pass"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/border_text_filled"
                        android:gravity="center"
                        android:hint="@string/c_pass"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/border_text_filled"
                        android:gravity="center"
                        android:hint="@string/n_pass"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_password2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/border_text_filled"
                        android:gravity="center"
                        android:hint="@string/repeat_pass"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/save"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/button_red"
                        android:text="@string/save" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button_red"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/ip_list"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/details_list"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/time_list"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ListView
                        android:id="@+id/lv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>