<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_arrow_back" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/add_pass_logo" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pass"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/web_address"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border_text_filled"
                    android:gravity="center"
                    android:hint="@string/web_addr"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border_text_filled"
                    android:gravity="center"
                    android:hint="@string/descript"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border_text_filled"
                    android:gravity="center"
                    android:hint="@string/user"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border_text_filled"
                    android:gravity="center"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_red"
                    android:text="@string/save" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>